Moving index file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creato</title>
-    <link rel="stylesheet" href="../dist/css/iconfont/tabler-icons.css">
-    <link rel="stylesheet" href="../dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/iconfont/tabler-icons.css">
+    <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
     <!------------------------------>
@@ -16,7 +16,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-xl py-0">
                     <div class="logo">
-                        <a class="navbar-brand py-0 me-0" href="#"><img src="../assets/images/logo_tmp.png" width=25% alt=""></a>
+                        <a class="navbar-brand py-0 me-0" href="#"><img src="assets/images/logo_tmp.png" width=25% alt=""></a>
                     </div>
                     <a class="d-inline-block d-lg-block d-xl-none d-xxl-none  nav-toggler text-decoration-none"  data-bs-toggle="offcanvas" href="#offcanvasExample" aria-controls="offcanvasExample">
                         <i class="ti ti-menu-2"></i>
@@ -40,7 +40,7 @@
             <div class="offcanvas offcanvas-start"  tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
                 <div class="offcanvas-header">
                     <div class="logo">
-                        <a class="navbar-brand py-0 me-0" href="#"><img src="../assets/images/Creato-logo.svg" alt=""></a>
+                        <a class="navbar-brand py-0 me-0" href="#"><img src="assets/images/Creato-logo.svg" alt=""></a>
                     </div> 
                     <button type="button" class="btn-close text-reset  ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"><i class="ti ti-x"></i></button>
                 </div>
@@ -87,10 +87,10 @@
         <div class="right-white-overlay position-relative"></div>
         <div class="container position-relative">
             <div class="left-icon">
-                <!--<img src="../assets/images/hero/Macbook_color.svg" class="img-fluid position-absolute">-->
+                <!--<img src="assets/images/hero/Macbook_color.svg" class="img-fluid position-absolute">-->
             </div>
             <div class="right-icon">
-                <!--<img src="../assets/images/hero/mobile-icon.svg" class="img-fluid position-absolute">-->
+                <!--<img src="assets/images/hero/mobile-icon.svg" class="img-fluid position-absolute">-->
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-xxl-7 col-xl-8 col-lg-9 col-md-12 col-sm-12 col-12 text-center">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-					<img class="careto" src="../assets/IMG_0203.gif"  width=20%>
+					<img class="careto" src="assets/IMG_0203.gif"  width=20%>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-xxl-4 col-xxl-4 col-lg-4 col-md-12 col-sm-12 col-12">
                     <div class="footer-logo-col">
-                        <a href="#"><img src="../assets/images/logo_tmp.png"></a>
+                        <a href="#"><img src="assets/images/logo_tmp.png"></a>
                         
                     </div>
                 </div>
@@ -176,10 +176,10 @@
                         <li><a href="#" class="text-capitalize fs-6 text-decoration-none">about us</a></li>
                     </ul><p class="copyrights fs-5 mb-0">Copyright @ <span id="autodate"></span></p>
                         <ul class="social-icons list-unstyled mb-0 pl-0 d-flex align-items-center">
-                            <li><a href="#" class="rounded-circle"><img src="../assets/images/footer/icon_facebook_white.svg"><img src="../assets/images/footer/icon_facebook_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="../assets/images/footer/icon_twitter_white.svg"><img src="../assets/images/footer/icon_twitter_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="../assets/images/footer/icon_google_plus_white.svg"><img src="../assets/images/footer/icon_google_plus_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="../assets/images/footer/icon_linkdin_white.svg"><img src="../assets/images/footer/icon_linkdin_white.svg"></a></li>
+                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_facebook_white.svg"><img src="assets/images/footer/icon_facebook_white.svg"></a></li>
+                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_twitter_white.svg"><img src="assets/images/footer/icon_twitter_white.svg"></a></li>
+                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_google_plus_white.svg"><img src="assets/images/footer/icon_google_plus_white.svg"></a></li>
+                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_linkdin_white.svg"><img src="assets/images/footer/icon_linkdin_white.svg"></a></li>
                         </ul>
                 </div>
             </div>
@@ -193,9 +193,9 @@
     <!------------------------------>
     <!----------- Js Libs ---------->
     <!------------------------------>
-    <script src="../dist/js/jquery.min.js"></script>
-    <script src="../dist/js/bootstrap.min.js"></script>
-    <script src="../dist/js/custom.js"></script>
+    <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/custom.js"></script>
 
 </body>
 </html>
