Updating social media icons and links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <a class="navbar-brand py-0 me-0" href="#"><img src="assets/images/logo_tmp.png" width=25% alt=""></a>
                     </div>
                     <a class="d-inline-block d-lg-block d-xl-none d-xxl-none  nav-toggler text-decoration-none"  data-bs-toggle="offcanvas" href="#offcanvasExample" aria-controls="offcanvasExample">
-                        <i class="ti ti-menu-2"></i>
+                        <i class="fi fi-br-menu-burger"></i>
                     </a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">                                             
                             <ul class="navbar-nav mx-auto">
@@ -40,7 +40,7 @@
             <div class="offcanvas offcanvas-start"  tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
                 <div class="offcanvas-header">
                     <div class="logo">
-                        <a class="navbar-brand py-0 me-0" href="#"><img src="assets/images/Creato-logo.svg" alt=""></a>
+                        <a class="navbar-brand py-0 me-0" href="#"><img src="assets/images/logo_tmp.png" width="50%" alt=""></a>
                     </div> 
                     <button type="button" class="btn-close text-reset  ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"><i class="ti ti-x"></i></button>
                 </div>
@@ -51,21 +51,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Team </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Review</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
                         </li>
                         </ul>
                         <div class="login d-block align-items-center">
@@ -176,10 +161,11 @@
                         <li><a href="#" class="text-capitalize fs-6 text-decoration-none">about us</a></li>
                     </ul><p class="copyrights fs-5 mb-0">Copyright @ <span id="autodate"></span></p>
                         <ul class="social-icons list-unstyled mb-0 pl-0 d-flex align-items-center">
-                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_facebook_white.svg"><img src="assets/images/footer/icon_facebook_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_twitter_white.svg"><img src="assets/images/footer/icon_twitter_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_google_plus_white.svg"><img src="assets/images/footer/icon_google_plus_white.svg"></a></li>
-                            <li><a href="#" class="rounded-circle"><img src="assets/images/footer/icon_linkdin_white.svg"><img src="assets/images/footer/icon_linkdin_white.svg"></a></li>
+                            
+                            <li><a href="https://x.com/woolberrygames" class="rounded-circle"><img src="assets/images/social-media/icons8-twitter-240.png" width="60%"><img src="assets/images/social-media/icons8-twitter-240.png" width="60%"></a></li>
+                            <li><a href="https://www.instagram.com/woolberrygames" class="rounded-circle"><img src="assets/images/social-media/icons8-instagram-240.png" width="80%"><img src="assets/images/social-media/icons8-instagram-240.png" width="80%"></a></li>
+                            <li><a href="https://woolberrygames.bsky.social" class="rounded-circle"><img src="assets/images/social-media/icons8-bluesky-240.png" width="60%"><img src="assets/images/social-media/icons8-bluesky-240.png" width="60%"></a></li>
+                            <li><a href="https://www.threads.com/@woolberrygames" class="rounded-circle"><img src="assets/images/social-media/icons8-threads-240.png" width="70%"><img src="assets/images/social-media/icons8-threads-240.png" width="70%"></a></li>
                         </ul>
                 </div>
             </div>
